[tool.poetry]
name = "calculator-webapp-backend"
version = "0.1.0"
description = ""
authors = ["Namkha Encyclopedia <namkha@simonweiss.space>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
